--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-fetch_customs_data = "customs_data_fetcher.main:main"
+fetch_customs_data = "customs_data_fetcher.main:run"
